fix: return false when given matching tags is null or empty